feat: Respond with body